--- a/src/app/features/report-section/components/customer-report/customer-report.component.html
+++ b/src/app/features/report-section/components/customer-report/customer-report.component.html
@@ -25,8 +25,9 @@
       <div class="rounded-lg w-full overflow-x-auto p-2 bg-white shadow-sm border border-gray-200">
         <!-- Filters -->
         <div class="min-w-full relative z-10">
-          <div class="flex flex-nowrap items-start gap-x-2 gap-y-2 mb-4 py-2 bg-gray-50 rounded shadow-sm w-full overflow-x-auto">
-            <!-- Customer Name Filter -->
+          <div
+          class="flex flex-nowrap items-start gap-x-2 gap-y-2 mb-4 py-2 bg-gray-50 rounded shadow-sm w-full overflow-x-auto"
+          style="overflow: visible;">            <!-- Customer Name Filter -->
             <div class="relative w-48">
               <label class="block text-xs font-medium mb-1">Customer</label>
               <ng-select [(ngModel)]="customerNameFilter" (change)="applyFilters()" [clearable]="true" [searchable]="true"
