--- a/src/app/features/report-section/components/project-report/project-report.component.html
+++ b/src/app/features/report-section/components/project-report/project-report.component.html
@@ -1,6 +1,6 @@
 <div class="p-4">
     <div class="bg-white rounded-lg shadow-sm border border-gray-200 p-6 m-4">
-      <!-- Title Section -->
+        <!-- Title Section -->
       <div class="mb-4 pb-4 border-b border-gray-200">
         <div class="flex justify-between items-center">
           <div>
@@ -24,9 +24,10 @@
       <!-- Filters and Table Section -->
       <div class="rounded-lg w-full overflow-x-auto p-2 bg-white shadow-sm border border-gray-200">
         <!-- Filters -->
-        <div class="min-w-full relative z-10">
-          <div class="flex flex-nowrap items-start gap-x-2 gap-y-2 mb-4 py-2 bg-gray-50 rounded shadow-sm w-full overflow-x-auto">
-            <!-- Project Name Filter -->
+        <div class="min-w-full relative">
+            <div
+            class="flex flex-nowrap items-start gap-x-2 gap-y-2 mb-4 py-2 bg-gray-50 rounded shadow-sm w-full overflow-x-auto"
+            style="overflow: visible;">            <!-- Project Name Filter -->
             <div class="relative w-48">
               <label class="block text-xs font-medium mb-1">Project</label>
               <ng-select [(ngModel)]="projectNameFilter" (change)="applyFilters()" [clearable]="true" [searchable]="true"
